--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                                         <div class="item">Item 1</div>
                                         <div class="item">Item 2</div>
                                         <div class="item">Item 3</div>
+                                    </div>
                                 </td>
                             </tr>
                         </tbody>
